# hermes-help

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PLAN.md  SPEC.md  phase-5-forward-audit.md  phase-5-plan.md  phase-5-research.md  phase-5-reverse-audit.md  phase-5-spec.md  phase-5-synthesis.md
docs/reports/: audit-phase-plan.md  audit-report.md
plugin/: plugin.yaml
scripts/: deploy-plugin.sh
src/hermes_help/: __init__.py  __main__.py  cli.py  compiled_schema.json  config.py
src/hermes_help/plugin/: __init__.py  plugin.yaml
src/hermes_help/schema/: __init__.py  dynamic.py  matcher.py  static.py  validator.py
src/hermes_help/tui/: app.py
src/hermes_help/tui/screens/: __init__.py
src/hermes_help/tui/widgets/: __init__.py  param_editor.py
tests/: conftest.py  test_dynamic.py  test_matcher.py  test_plugin.py  test_static.py  test_tui.py  test_validator.py
