[project]
name = "hermes-help"
version = "0.1.0"
description = "Hermes Agent configuration CLI + TUI wizard — schema-aware, always-current, always-correct"
readme = "README.md"
authors = [
    { name = "Steven Page", email = "sysop@rapidwebs.io" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["hermes", "agent", "configuration", "cli", "tui", "nous-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "textual>=1.0,<2.0",
]

[project.scripts]
hermes-help = "hermes_help.cli:main"
hermes-help-tui = "hermes_help.tui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
# For live config introspection on a running Hermes install
live = [
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hermes_help*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["__pycache__", "*.pyc", ".git", ".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "YTT", "RUF100"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D212", "D213", "D402", "D415", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]
